fix(css): remove scrollbars

--- a/style/app.css
+++ b/style/app.css
@@ -1,24 +1,3 @@
-﻿@-ms-viewport {
-  width: 1920px;
-  height: 1080px;
-  orientation: landscape;
-}
-@-moz-viewport {
-  width: 1920px;
-  height: 1080px;
-  orientation: landscape;
-}
-@-webkit-viewport {
-  width: 1920px;
-  height: 1080px;
-  orientation: landscape;
-}
-@viewport {
-  width: 1920px;
-  height: 1080px;
-  orientation: landscape;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -36,9 +15,10 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  overflow: hidden;
+
   font-size: 30px;
-  
+
   background-size: cover;
   background-position: center;
   background-image: url("../UI/시작화면/시작화면배경.jpg");
@@ -47,7 +27,7 @@ html {
 body {
   padding: 0;
   background-color: rgba(250, 250, 250, 0.2);
-  
+
   width: 1820px;
   height: 980px;
 
@@ -236,7 +216,7 @@ body {
   height: 200px;
   background-color: #FF937E;
   margin: 20px;
-  
+
   display: flex;
   justify-content: center;
   align-items: center;
